--- a/Problem Statements/Project49_Problem_Statement.tex
+++ b/Problem Statements/Project49_Problem_Statement.tex
@@ -17,6 +17,9 @@
 \maketitle
 
 \begin{abstract}
+
+July 2019 will mark the 50th anniversary of the Apollo 11 Moon Landing. To commemorate this anniversary, the Oregon Museum of Science and Industry (OMSI) has partnered with Oregon State University (OSU) to produce a twenty-five-minute 3D animation of the Apollo 11 mission to be displayed in the museum. This animation will encompass all aspects of the mission, from takeoff, to moon landing, to Earth landing, and every part in-between. This project is meant to give viewers an accurate depiction of the Apollo 11 mission so that they will be able to fully appreciate the scale and complexity of such an undertaking. This will require us to become familiar with all aspects of the mission, including trans-lunar injection, command module docking, trans-Earth injection, and more. The animation will be viewed by audiences of all ages and backgrounds, meaning that the end product needs to be made in a way that anyone can view and understand the stages and processes of the Apollo 11 Mission.
+
 \end{abstract}
 
 \section{Problem Description}
