--- a/Problem Statements/Project49_Problem_Statement.tex
+++ b/Problem Statements/Project49_Problem_Statement.tex
@@ -23,9 +23,11 @@ July 2019 will mark the 50th anniversary of the Apollo 11 Moon Landing. To comme
 \end{abstract}
 
 \section{Problem Description}
-
-
+Our problem is that we need to recreate the Apollo 11 mission using 3D graphics. The 25 minute video will need to include the Earth launch, trans-lunar injection, lunar flight, moon landing, moon launch, command module docking, trans-Earth injection, flight to Earth, and the Earth landing. We must also make the video in such a way that general audiences will enjoy viewing it as well as understand what is happening.
 \section{Proposed Solution}
+The proposed solution to this problem is to begin researching the Apollo 11 mission. This includes researching: what our 3D models should look like, the course the Apollo 11 took to the moon and back, what every aspect of the flight looked like, how the physics of space affected the mission, and what sounds the crew might have heard during the mission.
+
+In order to make the video, our group could use a program like Unity. To make the video more enjoyable to watch, our group should add audio files to the video. These files would include the sounds of the rockets during launch and the discussions the crew had with the team on Earth. When making the video, we must implement physics where we can in order to be as realistic as possible.
 
 
 \section{Metrics}
