--- a/Problem Statements/Project49_Problem_Statement.tex
+++ b/Problem Statements/Project49_Problem_Statement.tex
@@ -27,10 +27,10 @@ Our problem is that we need to recreate the Apollo 11 mission using 3D graphics.
 \section{Proposed Solution}
 The proposed solution to this problem is to begin researching the Apollo 11 mission. This includes researching: what our 3D models should look like, the course the Apollo 11 took to the moon and back, what every aspect of the flight looked like, how the physics of space affected the mission, and what sounds the crew might have heard during the mission.
 
-In order to make the video, our group could use a program like Unity. To make the video more enjoyable to watch, our group should add audio files to the video. These files would include the sounds of the rockets during launch and the discussions the crew had with the team on Earth. When making the video, we must implement physics where we can in order to be as realistic as possible.
+In order to make the video, our group could use a program like Unity. To make the video more enjoyable to watch, our group should add audio files to the video. These files would include the sounds of the rockets during launch and the discussions the crew had with the team on Earth. In order to make the video accessible to general audiences, transcpritions of the audio files will also have to be included in the video. When making the video, we must implement physics wherever possible in order to be realistic. Where we cannot use physics, we will utilize idealized motion instead.
 
 
 \section{Metrics}
-
+We will know when the project is done when several benchmarks are finished. We must design this project in a way that it can be played back over on any system or computer, so we can reuse it in the future and be able to edit or build off of. Since this project will be shown in public, it must be held to a certain standard with very little to no graphical errors. At a very minimum, a working prototype would be able to play from start to finish without any errors, including the interactivity of the animation. In terms of a beta, all objects must be rendered in the scene correctly, this includes Earth, the Moon, Apollo 11, and the sky box (star map), and possibly more as the project moves on. The final version would be able to be displayed in the planetarium at OMSI fully, this includes the interpolation of the animation to the various screens as well as the programming of the show in their in-house SDK. If this cannot be accomplished, a full version of the animation that is feature complete would be the minimum to be considered finished. 
 
 \end{document}
