--- a/Problem Statements/Project49_Problem_Statement.tex
+++ b/Problem Statements/Project49_Problem_Statement.tex
@@ -24,13 +24,17 @@ July 2019 will mark the 50th anniversary of the Apollo 11 Moon Landing. To comme
 
 \section{Problem Description}
 Our problem is that we need to recreate the Apollo 11 mission using 3D graphics. The 25 minute video will need to include the Earth launch, trans-lunar injection, lunar flight, moon landing, moon launch, command module docking, trans-Earth injection, flight to Earth, and the Earth landing. We must also make the video in such a way that general audiences will enjoy viewing it as well as understand what is happening.
+
 \section{Proposed Solution}
-The proposed solution to this problem is to begin researching the Apollo 11 mission. This includes researching: what our 3D models should look like, the course the Apollo 11 took to the moon and back, what every aspect of the flight looked like, how the physics of space affected the mission, and what sounds the crew might have heard during the mission.
+To create the best solution we can, research about the Apollo 11 mission is required. We will need to learn what our 3D models should look like, the course the Apollo 11 took to the moon and back, what every aspect of the flight looked like, how the physics of space affected the mission, and much more. To make the animation, we will primarily use a combination of C++ and OpenGL to produce the graphics. OpenGL allows us to insert 3D models into a scene, animate them, and view them from arbitrary viewpoints. This, combined with the logical programming power of C++ allows for high-end computer graphics managed by a powerful code base. Further into the project, we may decide in implement a solution in the Unity game engine to make our final product more accessible. Along with this, we will add audio to the animation for more viewing enjoyment, including the thrusters during takeoff, mission communications, and the mission-ending splashdown.
+\newline
+\newline
+We will use 3D models that most accurately represent the Apollo 11 mission, using real images and textures when possible. When we cannot use real images, we will analyze the real mission closely and produce a solution that will be as close to the real thing as possible. When animating the 3D models, we will use physics to represent as much movement as we can and using idealized motion in other scenarios for the most accurate representation possible. Things we will consider may include gravity, drag, thrust, escape velocity, and more. These will all play a part when launching the rocket, releasing the propulsion systems, landing on the moon, command module docking, Earth landing, etc. Once we have a prototype of the animation, we will need to see if it is possible to access the SDK that is used for the projectors in OMSI's planetarium. As long as it is possible, we will update our project to be compatible with the 10 projectors used in the planetarium. 
 
-In order to make the video, our group could use a program like Unity. To make the video more enjoyable to watch, our group should add audio files to the video. These files would include the sounds of the rockets during launch and the discussions the crew had with the team on Earth. In order to make the video accessible to general audiences, transcpritions of the audio files will also have to be included in the video. When making the video, we must implement physics wherever possible in order to be realistic. Where we cannot use physics, we will utilize idealized motion instead.
-
-
-\section{Metrics}
-We will know when the project is done when several benchmarks are finished. We must design this project in a way that it can be played back over on any system or computer, so we can reuse it in the future and be able to edit or build off of. Since this project will be shown in public, it must be held to a certain standard with very little to no graphical errors. At a very minimum, a working prototype would be able to play from start to finish without any errors, including the interactivity of the animation. In terms of a beta, all objects must be rendered in the scene correctly, this includes Earth, the Moon, Apollo 11, and the sky box (star map), and possibly more as the project moves on. The final version would be able to be displayed in the planetarium at OMSI fully, this includes the interpolation of the animation to the various screens as well as the programming of the show in their in-house SDK. If this cannot be accomplished, a full version of the animation that is feature complete would be the minimum to be considered finished. 
+\section{Performance Metrics}
+We will know when the project is done when several benchmarks are finished. Ideally, we will be able to produce a twenty-five-minute long, 3D animation of all stages of the Apollo 11 mission that will be able to be shown at OMSI in their 10-projector planetarium. This would consist of the following scenes: Earth launch, trans-lunar injection, lunar flight, moon landing, moon launch, command module docking, trans-Earth injection, flight to the Earth, and Earth landing. All of these scenes will need to be smoothly strung together while also providing the viewer with the ability to view the scene from any vantage point they choose. Each scene will use as much physics for animation and actual texture data for the models as possible to accurately represent the mission. Also,w e must design this project in a way that it can be played back over on any system or computer, so we can reuse it in the future and be able to build off of it.
+\newline
+\newline
+Since this project will be on public display, it must be held to a certain standard of graphical quality. At a very minimum, a working prototype would be able to play from start to finish without any critical errors. Depending on what we decide with the client, we may also work on narration for the animation since it will be displayed in an educational setting. To make sure that we are meeting our client's expectations, we plan to send segments of the animation for feedback as we are able. Then, when we have a prototype, we can work with our client to attempt to display it in the planetarium as a first overall test. Lastly, and above all else, we want to align with OMSI’s mission statement: "Inspire curiosity through engaging science learning experiences, foster experimentation and the exchange of ideas, and stimulate informed action.” 
 
 \end{document}
