--- a/Problem Statements/Project49_Problem_Statement.tex
+++ b/Problem Statements/Project49_Problem_Statement.tex
@@ -22,6 +22,8 @@ July 2019 will mark the 50th anniversary of the Apollo 11 Moon Landing. To comme
 
 \end{abstract}
 
+\newpage
+
 \section{Problem Description}
 Our problem is that we need to recreate the Apollo 11 mission using 3D graphics. The 25 minute video will need to include the Earth launch, trans-lunar injection, lunar flight, moon landing, moon launch, command module docking, trans-Earth injection, flight to Earth, and the Earth landing. We must also make the video in such a way that general audiences will enjoy viewing it as well as understand what is happening.
 
