--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -83,9 +83,11 @@
 % 8. now you write!
 \section{Introduction}
     \subsection{Purpose}
+    The purpose of having these requirements is so we will be able to measure our projects completion. When every requirement is fulfilled, our project will be considered complete by our group as well as our clients.
     \subsection{Scope}
     \subsection{Overview}
     \subsection{Definitions}
+    Software Development Kit (SDK) is the set of software tools that allows for applications of a certain software, hardware, computer system, operating system or similar development platform
 \section{References}
 \section{System Requirements}
 \section{Verification}
