--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -82,12 +82,14 @@
 
 % 8. now you write!
 \section{Introduction}
+Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D graphics. This project is for the Oregon Museum of Science and Industry to display in their planetarium for the 50th anniversary of the Apollo 11 mission. This document contains the requirements for this project that our group and clients, Jim Todd and Mike Biley, have agreed upon. These requirements act as a definitive list of features that our project will need to implement in order for it to be considered complete. 
     \subsection{Purpose}
-    The purpose of having these requirements is so we will be able to measure our projects completion. When every requirement is fulfilled, our project will be considered complete by our group as well as our clients.
+    The purpose of having these requirements is so we will be able to measure our projects completion. This document will act as a checklist of what features need to be implemented in order for this project to be completed. When every requirement is fulfilled, our project will be considered complete by our group as well as our clients.
     \subsection{Scope}
     \subsection{Overview}
+    For the video of the Apollo 11 to be considered complete the follwing features will need to be implemented: textured 3D objects, a variety of camera positions for the viewer, the flight path of Apollo 11, docking of the modules, physics, and audio files and transcriptions. This is a general overview of the requirements for this project. The System Requirements section will go into more detail explaining  
     \subsection{Definitions}
-    Software Development Kit (SDK) is the set of software tools that allows for applications of a certain software, hardware, computer system, operating system or similar development platform
+    The Software Development Kit (SDK) is the set of software tools that allows for applications of a certain software, hardware, computer system, operating system or similar development platform. OMSI is an acronym for the Oregon Museum of Science and Industry.
 \section{References}
 \section{System Requirements}
 \section{Verification}
