--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -90,9 +90,24 @@ Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D
     For the video of the Apollo 11 to be considered complete the follwing features will need to be implemented: textured 3D objects, a variety of camera positions for the viewer, the flight path of Apollo 11, docking of the modules, physics, and audio files and transcriptions. This is a general overview of the requirements for this project. The System Requirements section will go into more detail explaining  
     \subsection{Definitions}
     The Software Development Kit (SDK) is the set of software tools that allows for applications of a certain software, hardware, computer system, operating system or similar development platform. OMSI is an acronym for the Oregon Museum of Science and Industry.
-\section{References}
-\section{System Requirements}
+\section{Specific Requirements}
+    \subsection{External Interfaces}
+    At minimum, the animation will need to be viewed on some sort of computer display. Ideally, we will be able to gain access to OMSI's projector SDK so that we can display the animation in OMSI's planetarium through 10 projectors. There will also be audio alongside the animation, such as the sounds of the boosters, mission communications, and more (possibly captioned).
+    \subsection{Functions}
+    The 3D animation of the Apollo 11 Mission will include the entire flight path (launch to orbit, orbit to trans-lunar injection, to moon, to lunar orbit, to landing, to re-launch, to lunar orbit, to trans-Earth injection, to Earth, to splashdown). 3D objects will include the Earth, Moon, Lunar Module \textit{Eagle}, Saturn 5 rocket, Command Module, and others as we see fit. All of these sections will be smoothly animated together and be as scientifically accurate as possible.
+    \subsection{Usability Requirements}
+    Users will be able to view the animation from arbitrary viewpoints. This will be controlled by a computer mouse or some other input device. Any user with only basic computer knowledge should be able to change these viewpoints.
+    \subsection{Performance Requirements}
+    The animation will need to run at a steady frame rate throughout the whole mission to avoid breaking immersion. Also, there cannot be any errors when running the program; it will need to be robust enough to keep running even in edge-case environments.
 \section{Verification}
-\section{Appendices}
+    \subsection{External Interfaces}
+    Minimally, we can make sure that we can view the animation from a computer display. Then, if we gain access to the projector SDK, we can attempt to view the animation in OMSI's planetarium and make sure that the animation scales to that size correctly. Also, we need to make sure the audio sounds good from a computer station, but if we present in the planetarium, we will need to make sure the audience is treated to the best audio the planetarium can provide. 
+    \subsection{Functions}
+    We will make sure to include all parts of the flight path in the animation and these scenes need to transition from one to the other without any noticeable change. We will have 3D objects for all notable objects in the animation (Earth, Moon, Saturn 5 Rocket, etc.). Ideally, we will use physics for all movement, but a reasonable goal would be to have at least half the movement be based on real physics and used idealized motion for the rest.
+    \subsection{Usability Requirements}
+    Allow a user from outside of our project group take control of the animation and make sure that they system is user-friendly.
+    \subsection{Performance Requirements}
+    On a suitable, mid-range computer, the animation should be able to run and keep a steady frame rate even when given extreme values for input. We will aim for a frame rate that varies less than +/- 5 frames per second.
+\section{Gantt Chart}
 
 \end{document}
