--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -66,9 +66,7 @@
         }
         \begin{abstract}
         % 6. Fill in your abstract    
-        	This document is written using one sentence per line.
-        	This allows you to have sensible diffs when you use \LaTeX with version control, as well as giving a quick visual test to see if sentences are too short/long.
-        	If you have questions, ``The Not So Short Guide to LaTeX'' is a great resource (\url{https://tobi.oetiker.ch/lshort/lshort.pdf})
+        	Our group, The Apolloers, is working with Mike Bailey to create a 3D animation about the Apollo 11 Moon Landing. This animation will be put on display in OMSI during the Summer of 2019 for the 50th anniversary of the Apollo 11 mission. All parts of the mission will be included, from Earth Launch to Earth landing, and all sections in between. This document breaks the project into requirements that we will use to guide our project through the development process. 
         \end{abstract}     
     \end{singlespace}
 \end{titlepage}
@@ -82,14 +80,17 @@
 
 % 8. now you write!
 \section{Introduction}
-Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D graphics. This project is for the Oregon Museum of Science and Industry to display in their planetarium for the 50th anniversary of the Apollo 11 mission. This document contains the requirements for this project that our group and clients, Jim Todd and Mike Biley, have agreed upon. These requirements act as a definitive list of features that our project will need to implement in order for it to be considered complete. 
+Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D graphics. This project is for the Oregon Museum of Science and Industry to display in their planetarium for the 50th anniversary of the Apollo 11 mission. This document contains the requirements for this project that our group and clients, Jim Todd and Mike Bailey, have agreed upon. These requirements act as a definitive list of features that our project will need to implement in order for it to be considered complete. 
     \subsection{Purpose}
     The purpose of having these requirements is so we will be able to measure our projects completion. This document will act as a checklist of what features need to be implemented in order for this project to be completed. When every requirement is fulfilled, our project will be considered complete by our group as well as our clients.
     \subsection{Scope}
     \subsection{Overview}
-    For the video of the Apollo 11 to be considered complete the follwing features will need to be implemented: textured 3D objects, a variety of camera positions for the viewer, the flight path of Apollo 11, docking of the modules, physics, and audio files and transcriptions. This is a general overview of the requirements for this project. The System Requirements section will go into more detail explaining  
+    For the video of the Apollo 11 to be considered complete the following features will need to be implemented: textured 3D objects, a variety of camera positions for the viewer, the flight path of Apollo 11, docking of the modules, physics, and audio files and transcriptions. This is a general overview of the requirements for this project. The System Requirements section will go into more detail explaining  
     \subsection{Definitions}
-    The Software Development Kit (SDK) is the set of software tools that allows for applications of a certain software, hardware, computer system, operating system or similar development platform. OMSI is an acronym for the Oregon Museum of Science and Industry.
+    \begin{itemize}
+        \item SDK: The set of software tools that allows for applications of a certain software, hardware, computer system, operating system or similar development platform.
+        \item OMSI: The Oregon Museum of Science and Industry and is located in Portland, OR.
+    \end{itemize}
 \section{Specific Requirements}
     \subsection{External Interfaces}
     At minimum, the animation will need to be viewed on some sort of computer display. Ideally, we will be able to gain access to OMSI's projector SDK so that we can display the animation in OMSI's planetarium through 10 projectors. There will also be audio alongside the animation, such as the sounds of the boosters, mission communications, and more (possibly captioned).
