--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -84,7 +84,7 @@ Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D
     \subsection{Purpose}
     The purpose of having these requirements is so we will be able to measure our projects completion. This document will act as a checklist of what features need to be implemented in order for this project to be completed. When every requirement is fulfilled, our project will be considered complete by our group as well as our clients.
     \subsection{Scope}
-    This project will be a 25 minute video whose target audience are the people attending the planetarium at OMSI. This includes school children on a field trip, people interested in space travel, and people who are attending the show to be entertained.
+    This project will be a 25 minute video whose target audience are the people attending the planetarium at OMSI. This includes school children on a field trip, people interested in space travel, and people who are attending the planetarium to be entertained. Since the planetarium at OMSI has a large audience of diverse people, the Apollo 11 recreation will need to be accessible, entertaining, as well as realistic in order to educate the audience without boring them.
     \subsection{Overview}
     For the video of the Apollo 11 to be considered complete the following features will need to be implemented: textured 3D objects, a variety of camera positions for the viewer, the flight path of Apollo 11, docking of the modules, physics, and audio files and transcriptions. This is a general overview of the requirements for this project. The System Requirements section will go into more detail explaining  
     \subsection{Definitions}
