--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -86,7 +86,7 @@ Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D
     \subsection{Scope}
     This project will be a 25 minute video whose target audience are the people attending the planetarium at OMSI. This includes school children on a field trip, people interested in space travel, and people who are attending the planetarium to be entertained. Since the planetarium at OMSI has a large audience of diverse people, the Apollo 11 recreation will need to be accessible, entertaining, as well as realistic in order to educate the audience without boring them.
     \subsection{Overview}
-    For the video of the Apollo 11 to be considered complete the following features will need to be implemented: textured 3D objects, a variety of camera positions for the viewer, the flight path of Apollo 11, docking of the modules, physics, and audio files and transcriptions. This is a general overview of the requirements for this project. The System Requirements section will go into more detail explaining  
+    For the video of the Apollo 11 to be considered complete the following features will need to be implemented: textured 3D objects, a variety of camera positions for the viewer, the flight path of Apollo 11, docking of the modules, physics, and audio files and transcriptions. This is a general overview of the requirements for this project, but overall, we want to appeal to the audience that will be viewing this animation. The audiences at OMSI can range from technical professionals to families on a vacation, so regardless, this animation needs to be well received by many different types of viewers.
     \subsection{Definitions}
     \begin{itemize}
         \item SDK: The set of software tools that allows for applications of a certain software, hardware, computer system, operating system or similar development platform.
