--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -82,11 +82,11 @@
 \section{Introduction}
 Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D graphics. This project is for the Oregon Museum of Science and Industry to display in their planetarium for the 50th anniversary of the Apollo 11 mission. This document contains the requirements for this project that our group and clients, Jim Todd and Mike Bailey, have agreed upon. These requirements act as a definitive list of features that our project will need to implement in order for it to be considered complete. 
     \subsection{Purpose}
-    The purpose of having these requirements is so we will be able to measure our projects completion. This document will act as a checklist of what features need to be implemented in order for this project to be completed. When every requirement is fulfilled, our project will be considered complete by our group as well as our clients.
+    The purpose of this project is to educate the general public about the Apollo 11 mission as well as to commemorate the mission's 50th anniversary. Our goal is to create the video so that the audience at OMSI will appreciate the complexity of the mission while also being entertained. 
     \subsection{Scope}
     This project will be a 25 minute video whose target audience are the people attending the planetarium at OMSI. This includes school children on a field trip, people interested in space travel, and people who are attending the planetarium to be entertained. Since the planetarium at OMSI has a large audience of diverse people, the Apollo 11 recreation will need to be accessible, entertaining, as well as realistic in order to educate the audience without boring them.
     \subsection{Overview}
-    For the video of the Apollo 11 to be considered complete the following features will need to be implemented: textured 3D objects, a variety of camera positions for the viewer, the flight path of Apollo 11, docking of the modules, physics, and audio files and transcriptions. This is a general overview of the requirements for this project, but overall, we want to appeal to the audience that will be viewing this animation. The audiences at OMSI can range from technical professionals to families on a vacation, so regardless, this animation needs to be well received by many different types of viewers.
+    For the video of the Apollo 11 to be considered complete the following features will need to be implemented: textured 3D objects, a variety of camera positions for the viewer, the flight path of Apollo 11, docking of the modules, physics, and audio files and transcriptions. This is a general overview of the requirements for this project. The System Requirements section will go into more detail explaining  
     \subsection{Definitions}
     \begin{itemize}
         \item SDK: The set of software tools that allows for applications of a certain software, hardware, computer system, operating system or similar development platform.
