--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -110,6 +110,15 @@ Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D
     Allow a user from outside of our project group take control of the animation and make sure that they system is user-friendly.
     \subsection{Performance Requirements}
     On a suitable, mid-range computer, the animation should be able to run and keep a steady frame rate even when given extreme values for input. We will aim for a frame rate that varies less than +/- 5 frames per second.
+
+\newpage
+
 \section{Gantt Chart}
+
+\begin{figure}[!htb]
+    \includegraphics[width=\linewidth]{Gantt.png}
+    \caption{Gantt chart of proposed timeline}
+    \label{fig:Gantt Chart}
+\end{figure}
 
 \end{document}
