--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -30,7 +30,7 @@
 \par\vspace{-12pt} \textit{\tiny\noindent
 \makebox[2.75in]{} \hfil		\makebox[3.25in]{\makebox[2.25in][r]{Signature} \hfill	\makebox[.75in][r]{Date}}}}
 % 3. If the document is not to be signed, uncomment the RENEWcommand below
-%\renewcommand{\NameSigPair}[1]{#1}
+\renewcommand{\NameSigPair}[1]{#1}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
@@ -80,7 +80,7 @@
 
 % 8. now you write!
 \section{Introduction}
-Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D graphics. This project is for the Oregon Museum of Science and Industry to display in their planetarium for the 50th anniversary of the Apollo 11 mission. This document contains the requirements for this project that our group and clients, Jim Todd and Mike Bailey, have agreed upon. These requirements act as a definitive list of features that our project will need to implement in order for it to be considered complete. 
+Our group will be recreating the Apollo 11 mission in a 25-minute video using 3D graphics. This project is for the Oregon Museum of Science and Industry to display in their planetarium for the 50th anniversary of the Apollo 11 mission. This document contains the requirements for this project that our group and clients, Jim Todd and Mike Bailey, have agreed upon. These requirements act as a definitive list of features that our project will need to implement in order for it to be considered complete. 
     \subsection{Purpose}
     The purpose of this project is to educate the general public about the Apollo 11 mission as well as to commemorate the mission's 50th anniversary. Our goal is to create the video so that the audience at OMSI will appreciate the complexity of the mission while also being entertained. 
     \subsection{Scope}
@@ -90,7 +90,7 @@ Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D
     \subsection{Definitions}
     \begin{itemize}
         \item SDK: The set of software tools that allows for applications of a certain software, hardware, computer system, operating system or similar development platform.
-        \item OMSI: The Oregon Museum of Science and Industry and is located in Portland, OR.
+        \item OMSI: The Oregon Museum of Science and Industry, located in Portland, OR.
     \end{itemize}
 \section{Specific Requirements}
     \subsection{External Interfaces}
@@ -107,7 +107,8 @@ Our group will be recreating the Apollo 11 mission in a 25 minute video using 3D
     \subsection{Functions}
     We will make sure to include all parts of the flight path in the animation and these scenes need to transition from one to the other without any noticeable change. We will have 3D objects for all notable objects in the animation (Earth, Moon, Saturn 5 Rocket, etc.). Ideally, we will use physics for all movement, but a reasonable goal would be to have at least half the movement be based on real physics and used idealized motion for the rest.
     \subsection{Usability Requirements}
-    Allow a user from outside of our project group take control of the animation and make sure that they system is user-friendly.
+    Allow a user from outside of our project group take control of the animation and make sure that they system is user-friendly. They 
+    should be able to fully operate the program with minimal instruction from our group. 
     \subsection{Performance Requirements}
     On a suitable, mid-range computer, the animation should be able to run and keep a steady frame rate even when given extreme values for input. We will aim for a frame rate that varies less than +/- 5 frames per second.
 
