--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -94,7 +94,7 @@ Our group will be recreating the Apollo 11 mission in a 25-minute video using 3D
     \end{itemize}
 \section{Specific Requirements}
     \subsection{External Interfaces}
-    At minimum, the animation will need to be viewed on some sort of computer display. Ideally, we will be able to gain access to OMSI's projector SDK so that we can display the animation in OMSI's planetarium through 10 projectors. There will also be audio alongside the animation, such as the sounds of the boosters, mission communications, and more (possibly captioned).
+    At minimum, the animation will need to be viewed on some sort of computer display. Ideally, we will be able to gain access to OMSI's projector SDK so that we can display the animation in OMSI's planetarium through 10 projectors. There will also be audio alongside the animation, such as the sounds of the boosters, mission communications, and possibly captions.
     \subsection{Functions}
     The 3D animation of the Apollo 11 Mission will include the entire flight path (launch to orbit, orbit to trans-lunar injection, to moon, to lunar orbit, to landing, to re-launch, to lunar orbit, to trans-Earth injection, to Earth, to splashdown). 3D objects will include the Earth, Moon, Lunar Module \textit{Eagle}, Saturn 5 rocket, Command Module, and others as we see fit. All of these sections will be smoothly animated together and be as scientifically accurate as possible.
     \subsection{Usability Requirements}
@@ -103,7 +103,7 @@ Our group will be recreating the Apollo 11 mission in a 25-minute video using 3D
     The animation will need to run at a steady frame rate throughout the whole mission to avoid breaking immersion. Also, there cannot be any errors when running the program; it will need to be robust enough to keep running even in edge-case environments.
 \section{Verification}
     \subsection{External Interfaces}
-    Minimally, we can make sure that we can view the animation from a computer display. Then, if we gain access to the projector SDK, we can attempt to view the animation in OMSI's planetarium and make sure that the animation scales to that size correctly. Also, we need to make sure the audio sounds good from a computer station, but if we present in the planetarium, we will need to make sure the audience is treated to the best audio the planetarium can provide. 
+    Minimally, we can make sure that we can view the animation from a computer display. Then, if we gain access to the projector SDK, we can attempt to view the animation in OMSI's planetarium and make sure the animation scales to the correct size. Also, we need to make sure the audio sounds good from a computer station, but if we present in the planetarium, we will need to make sure the audience is treated to the best audio the planetarium can provide. 
     \subsection{Functions}
     We will make sure to include all parts of the flight path in the animation and these scenes need to transition from one to the other without any noticeable change. We will have 3D objects for all notable objects in the animation (Earth, Moon, Saturn 5 Rocket, etc.). Ideally, we will use physics for all movement, but a reasonable goal would be to have at least half the movement be based on real physics and used idealized motion for the rest.
     \subsection{Usability Requirements}
