--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -39,7 +39,7 @@
     \begin{singlespace}
         \hfill 
         % 4. If you have a logo, use this includegraphics command to put it on the coversheet.
-        %\includegraphics[height=4cm]{CompanyLogo}   
+        \includegraphics[height=4cm]{coe_v_spot1.eps}   
         \par\vspace{.2in}
         \centering
         \scshape{
