--- a/Requirements Doc/group49-requirements.tex
+++ b/Requirements Doc/group49-requirements.tex
@@ -14,7 +14,8 @@
 \def \GroupMemberThree{			Dean Akin}
 \def \CapstoneProjectName{		Apollo 11 3D Animation}
 \def \CapstoneSponsorCompany{	OMSI}
-\def \CapstoneSponsorPerson{	Mike Bailey}
+\def \CapstoneSponsorPersona{	Jim Todd}
+\def \CapstoneSponsorPersonb{	Mike Bailey}
 
 % 2. Uncomment the appropriate line below so that the document type works
 \def \DocType{		
@@ -51,7 +52,8 @@
             {\large Prepared for}\par
             \Huge \CapstoneSponsorCompany\par
             \vspace{5pt}
-            {\Large\NameSigPair{\CapstoneSponsorPerson}\par}
+            {\Large\NameSigPair{\CapstoneSponsorPersona}\par}
+            {\Large\NameSigPair{\CapstoneSponsorPersonb}\par}
             {\large Prepared by }\par
             Group\CapstoneTeamNumber\par
             % 5. comment out the line below this one if you do not wish to name your team
