--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -76,6 +76,7 @@
 \newpage
 \pagenumbering{arabic}
 \tableofcontents
+
 % 7. uncomment this (if applicable). Consider adding a page break.
 %\listoffigures
 %\listoftables
@@ -84,21 +85,60 @@
 % 8. now you write!
 
 \section{Overview}
-
-
+    \subsection{Scope}
+    \subsection{Purpose}
+    \subsection{Intended Audience}
 
 \section{Definitions}
+%Make this a list, check with Richard about using a table
 
-%Should this be a table or just a list?
+\section{Conceptual Model}
+%Mini-requirements doc
+    \subsection{}
 
-\section{1}
+\section{Design Description}
 
-\section{2}
+    \subsection{Design Stakeholders}
+    \subsection{Design Views}
+    \subsection{Design Viewpoints}
+    \subsection{Design Elements}
+    \subsection{Design Overlays}
+    \subsection{Design Rationale}
+    \subsection{Design Languages}
 
-\section{3}
+
+% Richard, Do we need to do ALL viewpoints, or is what we have ok?
+\section{Design Viewpoints}
+
+    \subsection{Context Viewpoint}
+    %This will be an OMSI presentation, viewers would be visitors, etc.
+    %careful about overlap with Interface viewpoint
+    
+    \subsection{Composition Viewpoint}
+    %How the project is split into different parts (Audio, modeling, textures, objects, etc.)
+    
+    \subsection{Logical Viewpoint}
+    %Classes we use, big libraries, etc.
+    
+    \subsection{Dependency Viewpoint}
+    %What we are using? OpenGL
+    
+    \subsection{Information Viewpoint}
+    %The physics, math, numbers, etc.
+
+    \subsection{Interface Viewpoint}
+    %How we want the end-product to work
+        % .exe file? Blender? Unity?
+        
+    \subsection{Interaction Viewpoint}
+    % People can just watch, or use mouse/keyboard to move viewpoint
+    % What's the mouse/keyboard going to do?
+    
+    \subsection{Resources Viewpoint}
+    % where are we getting 3-D objects, audio files, etc.
+
 
 \section{Conclusion}
-
 
 
 \end{document}
