--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -85,9 +85,14 @@
 % 8. now you write!
 
 \section{Overview}
-    \subsection{Scope}
+       \subsection{Scope}
+        This document focuses on the 3D animation for the Apollo 11 Mission that will be created by our group, "The Apolloers" for display at OMSI. The design principals of the project will be outlined here, as well as design elements, such as functionality, usability, requirements, and more. 
+        
     \subsection{Purpose}
+        The design of our 3D animation will be outlined throughout this document. While this document will be updated throughout the year, it will start as an outline of how we will be implementing the 3D animation throughout the year. 
+
     \subsection{Intended Audience}
+        This document is for people that are looking for a technical outline of how our 3D animation will be implemented. Some main takeaways of this document are the design, structure, and connectivity of the components of our project.
 
 \section{Definitions}
 %Make this a list, check with Richard about using a table
