--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -96,7 +96,7 @@
 
 \section{Definitions}
 %Make this a list, check with Richard about using a table
-
+-OMSI: Oregon Museum of Science and Industry
 \section{Conceptual Model}
 %Mini-requirements doc
     \subsection{}
@@ -140,6 +140,9 @@
     % What's the mouse/keyboard going to do?
     
     \subsection{Resources Viewpoint}
+    To obtain the audio of the transmissions between the Apollo 11 crew and Tranquility Base, we will use NASA's archive of audio files from the Apollo 11 mission.
+    
+    To obtain the audio for the sound effects in our project, our group will download audio files from free online sound effects libraries.
     % where are we getting 3-D objects, audio files, etc.
 
 
