--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -104,6 +104,7 @@
 \section{Design Description}
 
     \subsection{Design Stakeholders}
+    The stakeholders for our project are OMSI as well as the audiences who will be viewing our video. The educational and technical quality of our video will reflect on OMSI. Our group will also be using a storyboard created by some of OMSI's staff to base the video's narrative off of, so OMSI will also have influence over how this video is created. The planetarium audiences will also be affected by the technical and educational quality of our video. If the video is more entertaining than educational, then the audience will not understand the impact and ambition of the Apollo 11 mission. If the video is more educational than entertaining, then the audience will be bored and less likely to pay attention to the content of the video.
     \subsection{Design Views}
     \subsection{Design Viewpoints}
     \subsection{Design Elements}
