--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -120,12 +120,8 @@
     %This will be an OMSI presentation, viewers would be visitors, etc.
     %careful about overlap with Interface viewpoint
     
-    This animation will be viewed primarily by OMSI visitors. This audience can range from young school children on field trips, to very technical industry leaders. We will want the user of this program to be able to change the viewpoint of the scene, regardless of if the user is a visitor or a staff member running the program.  
-    
     \subsection{Composition Viewpoint}
     %How the project is split into different parts (Audio, modeling, textures, objects, etc.)
-    
-    Our project will consist of eleven main scenes of the Apollo 11 mission: launch, to orbit, to trans-lunar injection, to moon, to lunar orbit, to landing, to re-launch, to lunar orbit, to trans-Earth injection, to Earth, to splashdown. Then, within each of these scenes, there will be many different parts that make the scene: 3D objects, animation, audio, textures, lighting, orbital mechanics acting on objects, and possibly captioning for the audience. All of these parts come together to make the scenes that make the overall animation.
     
     \subsection{Logical Viewpoint}
     %Classes we use, big libraries, etc.
@@ -141,6 +137,7 @@
         % .exe file? Blender? Unity?
         
     \subsection{Interaction Viewpoint}
+    For our project, the audience will have the option to change the viewpoint of the scene. If the audience does not want to change the viewpoint, the viewpoint will stay at the default viewing positions that our group has chosen. If the audience wishes to change the viewpoint, they will be able to press keys on a keyboard to switch between viewpoints. The audience will be able to view the video from outside of the spacecraft, inside the spacecraft, on the moon, and on Earth.
     % People can just watch, or use mouse/keyboard to move viewpoint
     % What's the mouse/keyboard going to do?
     
