--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -120,8 +120,12 @@
     %This will be an OMSI presentation, viewers would be visitors, etc.
     %careful about overlap with Interface viewpoint
     
+    This animation will be viewed primarily by OMSI visitors. This audience can range from young school children on field trips, to very technical industry leaders. We will want the user of this program to be able to change the viewpoint of the scene, regardless of if the user is a visitor or a staff member running the program.  
+    
     \subsection{Composition Viewpoint}
     %How the project is split into different parts (Audio, modeling, textures, objects, etc.)
+    
+    Our project will consist of eleven main scenes of the Apollo 11 mission: launch, to orbit, to trans-lunar injection, to moon, to lunar orbit, to landing, to re-launch, to lunar orbit, to trans-Earth injection, to Earth, to splashdown. Then, within each of these scenes, there will be many different parts that make the scene: 3D objects, animation, audio, textures, lighting, orbital mechanics acting on objects, and possibly captioning for the audience. While there are not direct relationships between all these parts, they all add to the overall detail and quality of the animation. 
     
     \subsection{Logical Viewpoint}
     %Classes we use, big libraries, etc.
