--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -108,6 +108,14 @@
     \subsection{Design Views}
     \subsection{Design Viewpoints}
     \subsection{Design Elements}
+     The elements of our project include:
+    - OpenGL
+    - OpenAL
+    - Orbital mechanics
+    - 3D models of .....
+    - Audio files of the mission transmissions and sound effects
+    - Textures for our 3D models
+    - Lighting 
     \subsection{Design Overlays}
     \subsection{Design Rationale}
     \subsection{Design Languages}
