--- a/Design Doc/group49_design_document.tex
+++ b/Design Doc/group49_design_document.tex
@@ -148,6 +148,7 @@
     
     \subsection{Information Viewpoint}
     %The physics, math, numbers, etc.
+    For our project, the information we will need includes the flight path of the Apollo 11 as well as orbital mechanics for the Apollo 11 and solar system. 
 
     \subsection{Interface Viewpoint}
     %How we want the end-product to work
